--- a/a1/a1_client/pom.xml
+++ b/a1/a1_client/pom.xml
@@ -37,6 +37,12 @@
       <version>2.0.6</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math3</artifactId>
+      <version>3.6.1</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/com.opencsv/opencsv -->
     <dependency>
