--- a/a1/a1_client/pom.xml
+++ b/a1/a1_client/pom.xml
@@ -58,6 +58,12 @@
       <version>3.12.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+      <version>1.5.4</version>
+    </dependency>
 
   </dependencies>
   <properties>
