--- a/a2/a2_consumer/pom.xml
+++ b/a2/a2_consumer/pom.xml
@@ -22,11 +22,20 @@
             <version>5.16.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>2.0.5</version>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.6</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-nop -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-nop</artifactId>
+            <version>2.0.6</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
